[gd_scene load_steps=47 format=3 uid="uid://hvfbc8pwfisj"]

[ext_resource type="Script" path="res://level.gd" id="1_0p7bp"]
[ext_resource type="PackedScene" uid="uid://sbes3fxx23wc" path="res://Objects/player.tscn" id="2_05sfh"]
[ext_resource type="Texture2D" uid="uid://4ckeqdxma7m0" path="res://Textures/Player/Clothed Sprite Sheet 2.png" id="3_db6qy"]
[ext_resource type="PackedScene" uid="uid://pl2x1nqikijo" path="res://Objects/liftable.tscn" id="4_wuav1"]
[ext_resource type="Texture2D" uid="uid://78rrkdlkxrag" path="res://Textures/Kubo/standHighlight.png" id="5_tuqkf"]
[ext_resource type="Texture2D" uid="uid://chpp8bxivh5pn" path="res://Textures/Kubo/roomHighlight.png" id="6_t8mnk"]
[ext_resource type="Texture2D" uid="uid://1rgarwlnlgbe" path="res://Textures/Kubo/burnRoof.png" id="7_4ke0r"]
[ext_resource type="Texture2D" uid="uid://wuq674usl4cp" path="res://Textures/Kubo/roofHighlight.png" id="8_c30md"]
[ext_resource type="PackedScene" uid="uid://co1l12uwcutm2" path="res://Objects/goal.tscn" id="9_878ug"]
[ext_resource type="PackedScene" uid="uid://d1gds7u4hjhap" path="res://Objects/blockMap.tscn" id="10_6lkbt"]
[ext_resource type="Script" path="res://camera.gd" id="11_by6ca"]
[ext_resource type="PackedScene" uid="uid://cekw1rbfi24j2" path="res://Objects/cameraBoundaries.tscn" id="12_gyvfx"]
[ext_resource type="Texture2D" uid="uid://ni7gxo0pcqhc" path="res://Textures/Tutorials/lift.png" id="13_2vunm"]
[ext_resource type="Theme" uid="uid://dmm7qxbft8xa2" path="res://gameTheme.tres" id="14_7iyp7"]
[ext_resource type="FontFile" uid="uid://o0xxxmhp70u" path="res://Levels/Vaticanus-G3yVG.ttf" id="15_brvla"]
[ext_resource type="Texture2D" uid="uid://m56eweko1tr4" path="res://Textures/Kubo/hut.png" id="16_eh20t"]
[ext_resource type="Texture2D" uid="uid://h7ocmu3x2als" path="res://Textures/Tutorials/build.png" id="17_facgl"]
[ext_resource type="Texture2D" uid="uid://myvw7108paer" path="res://Textures/Tutorials/actions.png" id="18_xp2lq"]
[ext_resource type="Texture2D" uid="uid://ddami5cr8f7su" path="res://Textures/Mountain.png" id="19_yw07u"]
[ext_resource type="Texture2D" uid="uid://dis6pkdby5j6w" path="res://Textures/Clouds.png" id="20_0jhxx"]
[ext_resource type="PackedScene" uid="uid://bhpq5sx6brid5" path="res://Objects/audioPlayer.tscn" id="21_fro2n"]
[ext_resource type="Texture2D" uid="uid://ctn4l3lwqvxum" path="res://Textures/Decor/Grasses and Bushes.png" id="22_74wvy"]
[ext_resource type="Texture2D" uid="uid://b1hvu5jwia6rn" path="res://Textures/Decor/Bushes Spritesheet.png" id="23_466to"]
[ext_resource type="Texture2D" uid="uid://bkoye6mb4om2i" path="res://Textures/Decor/Trees.png" id="24_w7cr0"]
[ext_resource type="Texture2D" uid="uid://oys5hd5xf2cp" path="res://Textures/Decor/Signs.png" id="25_jdivm"]
[ext_resource type="PackedScene" uid="uid://dfymj3ljy6eyh" path="res://Objects/torch.tscn" id="26_prh67"]
[ext_resource type="PackedScene" uid="uid://4kp2j05do437" path="res://Objects/Burns/wick.tscn" id="27_e74lx"]
[ext_resource type="Script" path="res://Levels/cellularWater.gd" id="28_7myhu"]
[ext_resource type="PackedScene" uid="uid://p5hnrt2wqqic" path="res://Objects/dynamicWater.tscn" id="29_lwkje"]
[ext_resource type="PackedScene" uid="uid://d1f4mtptoug7s" path="res://Objects/bucket.tscn" id="30_dvlut"]
[ext_resource type="PhysicsMaterial" uid="uid://b7jkmtmvrye0q" path="res://liftable.tres" id="31_wxtem"]
[ext_resource type="PackedScene" uid="uid://bx4mfryc4hmh" path="res://Objects/gabi.tscn" id="32_cbc37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_najhu"]
size = Vector2(28, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbwri"]
size = Vector2(28, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3eis"]
size = Vector2(28, 5)

[sub_resource type="Animation" id="Animation_kjttt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Welcome:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Transition:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Goal/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Goal/Darken:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.223529, 0.321569, 0.435294, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(192, 160)]
}

[sub_resource type="Animation" id="Animation_xvlwb"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.233333, 0.633333),
"transitions": PackedFloat32Array(1, 1, 0.31864),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_imahd"]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Welcome:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Transition:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1, 4.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(2.5, 0.5, 1),
"update": 0,
"values": [Vector2(81, 219), Vector2(213, 219), Vector2(345, 219)]
}

[sub_resource type="Animation" id="Animation_74gor"]
resource_name = "win"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Goal/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Goal/Darken:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.223529, 0.321569, 0.435294, 0), Color(0, 0, 0, 0.635294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2573"]
_data = {
"RESET": SubResource("Animation_kjttt"),
"intro": SubResource("Animation_xvlwb"),
"start": SubResource("Animation_imahd"),
"win": SubResource("Animation_74gor")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2p15q"]
texture = ExtResource("22_74wvy")
9:0/0 = 0
1:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
1:3/0 = 0
3:3/0 = 0
5:3/0 = 0
9:3/0 = 0
1:5/0 = 0
3:5/0 = 0
5:5/0 = 0
9:5/0 = 0
1:7/0 = 0
9:7/0 = 0
10:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_baw5j"]
texture = ExtResource("23_466to")
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_463yc"]
texture = ExtResource("24_w7cr0")
1:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_na77f"]
texture = ExtResource("25_jdivm")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_3fk6n"]
sources/0 = SubResource("TileSetAtlasSource_2p15q")
sources/1 = SubResource("TileSetAtlasSource_baw5j")
sources/2 = SubResource("TileSetAtlasSource_463yc")
sources/3 = SubResource("TileSetAtlasSource_na77f")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivlsj"]
size = Vector2(377, 124)

[node name="Level" type="Node2D"]
script = ExtResource("1_0p7bp")

[node name="player1" parent="." instance=ExtResource("2_05sfh")]
position = Vector2(25, 203)
collision_layer = 9

[node name="Build" parent="player1" index="5"]
collision_layer = 0

[node name="player2" parent="." instance=ExtResource("2_05sfh")]
position = Vector2(65, 217)
collision_layer = 6
collision_mask = 2
lastDir = -1
id = 2

[node name="Sprite2D" parent="player2" index="1"]
texture = ExtResource("3_db6qy")
flip_h = true

[node name="PickUp" parent="player2" index="4"]
collision_mask = 2056

[node name="Build" parent="player2" index="5"]
collision_layer = 0

[node name="Stand" parent="." instance=ExtResource("4_wuav1")]
position = Vector2(113, 265)

[node name="Sprite2D" parent="Stand" index="0"]
position = Vector2(0, -21)
frame = 1

[node name="Highlight" parent="Stand" index="2"]
position = Vector2(0, -20)
texture = ExtResource("5_tuqkf")

[node name="CollisionShape2D" parent="Stand" index="3"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_najhu")

[node name="Top" parent="Stand" index="4"]
position = Vector2(0, -6)

[node name="Room" parent="." instance=ExtResource("4_wuav1")]
position = Vector2(209, 267)
id = 1

[node name="Sprite2D" parent="Room" index="0"]
position = Vector2(0, -21)
frame = 2

[node name="Highlight" parent="Room" index="2"]
position = Vector2(0, -20)
texture = ExtResource("6_t8mnk")

[node name="CollisionShape2D" parent="Room" index="3"]
position = Vector2(0.5, -8)
shape = SubResource("RectangleShape2D_fbwri")

[node name="Top" parent="Room" index="4"]
position = Vector2(0, -9)

[node name="Roof" parent="." instance=ExtResource("4_wuav1")]
position = Vector2(305, 269)
id = 2
interval = 0.5

[node name="Sprite2D" parent="Roof" index="0"]
position = Vector2(0, -21)
frame = 4

[node name="Burn" parent="Roof" index="1"]
visible = false
position = Vector2(0, -20)
texture = ExtResource("7_4ke0r")

[node name="Highlight" parent="Roof" index="2"]
position = Vector2(0, -20)
texture = ExtResource("8_c30md")

[node name="CollisionShape2D" parent="Roof" index="3"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_t3eis")

[node name="Top" parent="Roof" index="4"]
position = Vector2(0, -3)

[node name="Goal" parent="." instance=ExtResource("9_878ug")]
position = Vector2(370, 126)

[node name="Sprite2D" parent="Goal" index="1"]
frame = 5

[node name="StaticBlocks" parent="." instance=ExtResource("10_6lkbt")]
z_index = 100
position = Vector2(-112, -24)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("player1", "player2", "goal")]
z_index = 200
position = Vector2(192, 160)
zoom = Vector2(2, 2)
script = ExtResource("11_by6ca")
staticPosition = true
player1 = NodePath("../player1")
player2 = NodePath("../player2")
threshold = 3.0
goal = NodePath("../Goal")

[node name="CamBounds" parent="." instance=ExtResource("12_gyvfx")]
position = Vector2(208, 145)
scale = Vector2(0.328125, 0.148437)

[node name="Gameplay Text" type="CanvasLayer" parent="."]
layer = -10
visible = false
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Gameplay Text"]
position = Vector2(105, 120)
texture = ExtResource("13_2vunm")
region_enabled = true
region_rect = Rect2(0, 27.7505, 64, 23.5269)

[node name="Label" type="Label" parent="Gameplay Text"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -34.0
offset_right = -134.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_brvla")
theme_override_font_sizes/font_size = 16
text = "CARRY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="Gameplay Text"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -34.0
offset_right = -13.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_brvla")
theme_override_font_sizes/font_size = 16
text = "PARTS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="Gameplay Text"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -24.0
offset_right = -75.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_brvla")
theme_override_font_sizes/font_size = 16
text = "the"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="Gameplay Text"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -1.0
offset_right = 59.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_brvla")
theme_override_font_sizes/font_size = 16
text = "and"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label5" type="Label" parent="Gameplay Text"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 122.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_brvla")
theme_override_font_sizes/font_size = 16
text = "BUILD!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Sprite2D3" type="Sprite2D" parent="Gameplay Text"]
position = Vector2(210, 103)
texture = ExtResource("16_eh20t")
hframes = 17
frame = 2

[node name="Sprite2D4" type="Sprite2D" parent="Gameplay Text"]
position = Vector2(227, 110)
texture = ExtResource("16_eh20t")
hframes = 17
frame = 4

[node name="Highlight" type="Sprite2D" parent="Gameplay Text"]
position = Vector2(245, 101)
texture = ExtResource("5_tuqkf")

[node name="Sprite2D2" type="Sprite2D" parent="Gameplay Text"]
position = Vector2(360, 187)
texture = ExtResource("17_facgl")
region_enabled = true
region_rect = Rect2(0, 27.7505, 64, 23.5269)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(64, 32)
texture = ExtResource("18_xp2lq")

[node name="Welcome" type="Control" parent="UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Welcome"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.249667
anchor_top = 0.0593334
anchor_right = 0.750334
anchor_bottom = 0.399926
offset_left = 0.159988
offset_top = -0.0200043
offset_right = -0.160034
offset_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/Welcome/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
text = "Building the Hut"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Title" type="Label" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_7iyp7")
theme_override_font_sizes/font_size = 17
text = "Introduction"
horizontal_alignment = 2
autowrap_mode = 2

[node name="Transition" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="Sky2" type="ColorRect" parent="BG"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0, 0.909804, 0.176471)

[node name="Mountains" type="TextureRect" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_yw07u")
stretch_mode = 1

[node name="Clouds" type="TextureRect" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_0jhxx")
stretch_mode = 1

[node name="Sky" type="ColorRect" parent="BG"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.485665, 0.716228, 0.836873, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2573")
}

[node name="Players" parent="." instance=ExtResource("21_fro2n")]
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Decor" type="TileMapLayer" parent="."]
z_index = -100
tile_set = SubResource("TileSet_3fk6n")

[node name="Torch" parent="." instance=ExtResource("26_prh67")]
visible = false
position = Vector2(415, 120)
freeze = true

[node name="WICKS" type="Node2D" parent="."]
visible = false
position = Vector2(-131, -102)

[node name="Wick" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 205)
frameOverride = 5

[node name="Wick2" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 197)
frameOverride = 5

[node name="Wick3" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 189)
frameOverride = 5

[node name="Wick4" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 181)
frameOverride = 5

[node name="Wick5" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 173)
frameOverride = 5

[node name="Wick6" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 165)
frameOverride = 5

[node name="Wick7" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 157)
frameOverride = 5

[node name="Wick8" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 149)
frameOverride = 5

[node name="Wick9" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 141)
frameOverride = 5

[node name="Wick10" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 133)
frameOverride = 5

[node name="Wick11" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(58, 125)
frameOverride = 0

[node name="Wick12" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(66, 125)
frameOverride = 1

[node name="Wick13" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(74, 125)
frameOverride = 1

[node name="Wick14" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(82, 125)
frameOverride = 1

[node name="Wick15" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(90, 125)
frameOverride = 1

[node name="Wick16" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(98, 125)
frameOverride = 1

[node name="Wick17" parent="WICKS" instance=ExtResource("27_e74lx")]
position = Vector2(106, 125)
frameOverride = 1

[node name="WaterVisual" type="Node2D" parent="." node_paths=PackedStringArray("areaManager")]
self_modulate = Color(1, 1, 1, 0.713726)
z_index = 200
position = Vector2(88, 176)
script = ExtResource("28_7myhu")
areaManager = NodePath("../MasterWaterCollider")
width = 25
height = 8
gridColor = Color(0.296543, 0.287518, 0.979249, 1)
blockColor = Color(0.757931, 1.3236e-06, 2.88785e-07, 1)
waterColor = Color(0.0392157, 0.168627, 1, 1)
blocks = Array[Rect2]([Rect2(15, 7, 5, 1)])
initialWater = Array[Rect2]([Rect2(0, 0, 6, 1)])
bottoms = Array[Rect2]([Rect2(0, 7, 15, 1)])

[node name="MasterWaterCollider" parent="." node_paths=PackedStringArray("waterHanlder") instance=ExtResource("29_lwkje")]
position = Vector2(88, 144)
FLOAT_FORCE = 120
flowSpeed = 50.0
isRiver = true
waterHanlder = NodePath("../WaterVisual")

[node name="DeathCollider2" parent="." node_paths=PackedStringArray("waterHanlder") instance=ExtResource("29_lwkje")]
position = Vector2(123, 206)
FLOAT_FORCE = 120
flowSpeed = 50.0
waterHanlder = NodePath("../WaterVisual")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathCollider2"]
position = Vector2(194, 150)
shape = SubResource("RectangleShape2D_ivlsj")

[node name="Bucket" parent="." instance=ExtResource("30_dvlut")]
z_index = 1
position = Vector2(85, 180)
physics_material_override = ExtResource("31_wxtem")

[node name="Gabi" parent="." instance=ExtResource("32_cbc37")]
position = Vector2(160, 272)

[editable path="player1"]
[editable path="player2"]
[editable path="Stand"]
[editable path="Room"]
[editable path="Roof"]
[editable path="Goal"]
[editable path="CamBounds"]
